--- a/html/pages/photos.html
+++ b/html/pages/photos.html
@@ -26,9 +26,10 @@
 
       <!--  -->
       <div class="custom-box">
-        <div id="dream-1" class="dream"></div>
+        <div class="dream"></div>
+        <!-- <div id="dream-1" class="dream"></div>
         <div id="dream-2" class="dream"></div>
-        <div id="dream-3" class="dream"></div>
+        <div id="dream-3" class="dream"></div> -->
       </div>
 
       <!-- <div class="btn">
