insert log on upload image  done

--- a/html/pages/photos.html
+++ b/html/pages/photos.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="../../css/photos.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/wall.css" />
   </head>
   <body>
     <div id="navbar"></div>
@@ -27,14 +27,7 @@
       <!--  -->
       <div class="custom-box">
         <div class="dream"></div>
-        <!-- <div id="dream-1" class="dream"></div>
-        <div id="dream-2" class="dream"></div>
-        <div id="dream-3" class="dream"></div> -->
       </div>
-
-      <!-- <div class="btn">
-        <a href="#">More</a>
-      </div> -->
     </div>
 
     <!--  -->
