--- a/html/pages/upload.html
+++ b/html/pages/upload.html
@@ -46,7 +46,8 @@
             <option selected>None</option>
             <option value="Trees">Trees</option>
             <option value="Beach">Beach</option>
-            <option value="Animal">Animal</option></select
+            <option value="Animal">Animal</option>
+            <option value="People">People</option></select
           ><br />
 
           <label class="form-label">Photo #tag</label>
