--- a/html/pages/logs.html
+++ b/html/pages/logs.html
@@ -18,7 +18,7 @@
     <!-- axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <!--  -->
+    <!-- jquery datables -->
     <link
       rel="stylesheet"
       type="text/css"
