--- a/html/pages/view.html
+++ b/html/pages/view.html
@@ -40,7 +40,7 @@
         <!-- buttons -->
         <div class="row" style="width: 60%; margin: auto; margin-top: 20px">
           <div class="col">
-            <a>
+            <a id="like_a">
               <button
                 id="like"
                 type="button"
@@ -88,6 +88,7 @@
           </div>
 
           <div
+            id="comment_input"
             style="
               width: 60%;
               margin: auto;
