like unlike bug fixed

--- a/html/pages/view.html
+++ b/html/pages/view.html
@@ -48,7 +48,18 @@
                 style="margin: 10px"
               >
                 Like -
-                <span id="view-likes"></span>
+                <span id="view-likes-1"></span>
+              </button>
+            </a>
+            <a id="unlike_a">
+              <button
+                id="unlike"
+                type="button"
+                class="btn btn-outline-danger w-75"
+                style="margin: 10px"
+              >
+                Unlike -
+                <span id="view-likes-2"></span>
               </button>
             </a>
           </div>
