--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -1,67 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../../css/login.css">
+    <link rel="stylesheet" href="../../css/login.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../../script/login.js" type="text/javascript"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="login-wrap">
-        <div class="login-html">
-            <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign
-                In</label>
-            <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-            <div class="login-form">
-                <div class="sign-in-htm">
-                    <div class="group">
-                        <label for="username" class="label">Username</label>
-                        <input id="username" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="password" class="label">Password</label>
-                        <input id="password" type="password" class="input" data-type="password" required>
-                    </div>
-                    <br><br>
-                    <div class="group">
-                        <input type="button" id="submit" onclick="" class="button" value="Sign In">
+      <div class="login-html">
+        <input id="tab-1" type="radio" name="tab" class="sign-in" checked />
+        <label for="tab-1" class="tab">Sign In</label>
 
-                    </div>
-                    <div class="hr"></div>
+        <input id="tab-2" type="radio" name="tab" class="sign-up" />
+        <label for="tab-2" class="tab">Sign Up</label>
 
-                </div>
-                <div class="sign-up-htm">
-                    <div class="group">
-                        <label for="name" class="label">Name</label>
-                        <input id="name" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="userEmail" class="label">Email Address</label>
-                        <input id="userEmail" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="userName" class="label">User Name</label>
-                        <input id="userName" type="text" class="input">
-                    </div>
-                    <div class="group">
-                        <label for="userPass" class="label">Password</label>
-                        <input id="userPass" type="password" class="input" data-type="password">
-                    </div>
-                    <div class="group">
-                        <input type="submit" id="add" name="submit" class="button" value="submit">
-                    </div>
-                    <div class="hr"></div>
-                    <div class="foot-lnk">
-                        <label for="tab-1">Already Member?</a>
-                    </div>
-                </div>
+        <div class="login-form">
+          <div class="sign-in-htm">
+            <br /><br />
+            <div class="group">
+              <label for="username" class="label">Username</label>
+              <input id="username" type="text" class="input" />
             </div>
-        </div>
-    </div>
-</body>
 
+            <div class="group">
+              <label for="password" class="label">Password</label>
+              <input
+                id="password"
+                type="password"
+                class="input"
+                data-type="password"
+                required
+              />
+            </div>
+
+            <br />
+            <div class="group">
+              <input
+                type="button"
+                id="submit"
+                onclick=""
+                class="button"
+                value="Sign In"
+              />
+            </div>
+
+            <div style="text-align: center">
+              <label
+                id="form-status-1"
+                class="form-label-error"
+                style="color: goldenrod; font-size: 15px"
+              ></label>
+            </div>
+          </div>
+
+          <div class="sign-up-htm">
+            <div class="group">
+              <label for="name" class="label">Name</label>
+              <input id="name" type="text" class="input" />
+              <label id="name-error" class="form-label-error"></label>
+            </div>
+
+            <div class="group">
+              <label for="userEmail" class="label">Email Address</label>
+              <input id="userEmail" type="text" class="input" />
+              <label id="email-error" class="form-label-error"></label>
+            </div>
+
+            <div class="group">
+              <label for="userName" class="label">User Name</label>
+              <input id="userName" type="text" class="input" />
+            </div>
+
+            <div class="group">
+              <label for="userPass" class="label">Password</label>
+              <input
+                id="userPass"
+                type="password"
+                class="input"
+                data-type="password"
+              />
+              <label id="password-error" class="form-label-error"></label>
+            </div>
+
+            <div class="group">
+              <input
+                type="submit"
+                id="add"
+                name="submit"
+                class="button"
+                value="submit"
+              />
+            </div>
+
+            <div style="text-align: center">
+              <label
+                id="form-status"
+                class="form-label-error"
+                style="color: goldenrod"
+              ></label>
+            </div>
+
+            <div class="hr"></div>
+            <div class="foot-lnk">
+              <label for="tab-1">Already Member?</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
