--- a/html/pages/view.html
+++ b/html/pages/view.html
@@ -40,6 +40,7 @@
             id="view"
             src="..."
             style="width: auto; height: auto; margin: auto"
+            alt="image-view"
           />
         </div>
 
