--- a/html/pages/search.html
+++ b/html/pages/search.html
@@ -51,7 +51,7 @@
           style="width: 60%; margin: auto"
           onkeyup="search(JSON.parse(sessionStorage.getItem('all_images')))"
         />
-        <i class="fa fa-search"></i>
+        <em class="fa fa-search"></em>
       </form>
     </div>
 
