--- a/html/pages/upload.html
+++ b/html/pages/upload.html
@@ -70,7 +70,7 @@
 
         <!-- right column -->
         <div class="col-6" style="border: 1px solid black; text-align: center">
-          <img id="view-img-uploaded" width="100%" />
+          <img id="view-img-uploaded" width="100%" alt="uploaded-image" />
           <p id="hide-after-show-image">uploaded image will appear hear</p>
         </div>
       </div>
