upload page error div added

--- a/html/pages/upload.html
+++ b/html/pages/upload.html
@@ -33,6 +33,15 @@
         <h3>Upload <span>Photo</span></h3>
       </div>
 
+      <div
+        id="upload-photo-error-div"
+        class="alert alert-danger"
+        role="alert"
+        style="width: 80%; margin: auto; margin-bottom: 50px"
+      >
+        There was an ERROR in uploading photo. Sorry for the inconvenience.
+        <strong> Please try to upload again.</strong>
+      </div>
       <!-- form -->
       <div class="row" style="text-align: left; width: 100%">
         <!-- left column -->
