upload log bug solved

--- a/html/pages/upload.html
+++ b/html/pages/upload.html
@@ -34,6 +34,16 @@
       </div>
 
       <div
+        id="upload-photo-success-div"
+        class="alert alert-success"
+        role="alert"
+        style="width: 80%; margin: auto; margin-bottom: 50px"
+      >
+        Thanks for using Picaso.
+        <strong> Your Photo was uploaded Successfully.</strong>
+      </div>
+
+      <div
         id="upload-photo-error-div"
         class="alert alert-danger"
         role="alert"
