Search Page no image found added

--- a/html/pages/search.html
+++ b/html/pages/search.html
@@ -55,6 +55,10 @@
       </form>
     </div>
 
+    <div id="search_img_not_found" class="row">
+      <h1>No images found</h1>
+    </div>
+
     <!-- searched images will appear here -->
     <div class="container">
       <div class="custom-box">
